# template-stm32f3-rust

./: Cargo.toml  Embed.toml  memory.x
.cargo/: config.toml
src/: lib.rs
tests/: integration.rs
